--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.row input{
+ margin-top: 30px;
+ margin-left: 170px;
+ align-items: center;
+ justify-content:space-around;
+}
+.row .block{
+display: flex;
+align-items: center;
+justify-content:space-around;
+}
+
+.row .block img{
+width: 10px;
+}
